# MCUB-fork

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_DOC.md  Dockerfile  HookUsername.py  LICENSE  MCUB.py  README.md  config.example.json  config.json  docker-compose.yml  docker.sh  fsdafjdiufds.py  install.sh  link_preview_config.json  main.py  pyproject.toml  readfile.py  repositories.json  requirements-termux.txt  requirements.in  requirements.txt  sourcetrigger_triggers.json  test-command.py  userbot.py  users.json  version-test.py  version.txt
.github/workflows/: ci.yml
core/: .gitignore  .version.py.kate-swp  __init__.py  __main__.py  cache.py  idea.text  kernel.py  permissions.py  scheduler.py  system_modules.json  version.py
core/console/: .gitignore  config.cfg  config.py  restart.tmp  shell.py
core/console/base/: config_parser.py  display.py  lockfile.py  manager.py  resolver.py
core/kernel/: README.md  __init__.py  bot.py  mini.py  standard.py  test.py  test_kernel.py  zen.py  zen.py.off
core/langpacks/: __init__.py  en.yaml  linux.yaml  rofl.yaml  ru.yaml
core/lib/: .gitignore  database.py  exceptions.py  kernel_core.py  kernel_handlers.py  kernel_lifecycle.py  kernel_pipeline.py  module_config.py  register.py  scheduler.py
core/lib/base/: client.py  config.py  database.py  permissions.py
core/lib/loader/: archive.py  base.py  compat.py  decorators.py  dispatcher.py  inline.py  kernel_proxy.py  loader.py  module_base.py  module_config.py  protection.py  register.py  repository.py
core/lib/mixin/: dependency_manager_mixin.py  module_detector_mixin.py  module_loader_mixin.py  module_unloader_mixin.py  module_utils.py  system_loader_mixin.py  user_loader_mixin.py
core/lib/time/: cache.py  scheduler.py
core/lib/types/: __init__.py  client.py  event.py  inline_message.py  kernel.py  message.py  register.py
core/lib/utils/: __init__.py  cache_purger.py  case_insensitive.py  colors.py  exceptions.py  logger.py  msg_sanitizer.py
core/web/: .routes.py.kate-swp  __init__.py  app.py  auth.py  plugin_manager.py  routes.py
core/web/static/css/: setup.css  (+1 more)
core/web/templates/: index.html  setup.html
core_inline/: __init__.py  bot.py  command.py  handlers.py  keyboards.py  strings.py
core_inline/api/: __init__.py  core.py  inline.py
core_inline/lib/: __init__.py  manager.py
debugger/: README.md  __init__.py  cli.py  core.py  pyproject.toml  rules.py  types.py
debugger/tests/: __init__.py  test_debugger.py
doc/api/: archives.md  cache.md  commands.md  config.md  database.md  dependencies.md  errors.md  events.md  exceptions.md  kernel.md  middleware.md  module-api.md  module-config.md  scheduler.md  types.md
doc/examples/: bot_module.py  echo_module.py  greeting_module.py  search_module.py  test_module.py  todo_module.py  welcome_module.py
doc/getting-started/: index.md
doc/guides/: best-practices.md  custom-core.md  i18n.md  module-structure.md  pipeline.md
doc/inline/: callbacks.md  inline-form.md  inline-manager.md
doc/lib/: xlib.md
doc/reference/: antiscam.md  emoji.md  telethon.md
doc/registration/: class-style.md  enhanced-api.md  lifecycle.md  loops.md  new-methods.md  watchers.md
doc/utils/: core-utils.md  examples.md
modules/: .gitignore  MCUB_info.py  __init__.py  api_protection.py  backup_config.json  command.py  config.py  eval.py  evaluator.py  installation.py  loader.py  log_bot.py  man.py  settings.py  system-modules.py  terminal.py  tester.py  tr.py  translations.py  trusted.py  updates.py  userbot-backup.py  userbot_backup.py  utils-piped.py  virusfheta.py
modules_catalog/: Gemini.py  MCpy.py  README.md  TikTokdownloader.py  anime.py  autoreact.py  autoresponder.py  catalog.json  chatstats.py  crypto.py  example.py  example_module.py  fake.py  games.py  github.py  hostinfo.py  inline_example.py  k_uploader.py  linkhidermod.py  logger.py  mcdel.py  mcmod.py  mcplugin.py  memes.py  mitrich_mod.py  mitrichgram.py  msgsticker.py  music.py  pinghost.py  qr.py  quotes.py  reminder.py  shorturl.py  tabfix-tool.py  textart.py  timermessagesMC.py  tracker.py  translator.py  userbot_backup.py  utils.py  (+4 more)
modules_loaded/: .logger.py.kate-swp  DDNet_Player_Info.py  admin-mod-MCUB-repo.py  calc-MCUB-liber.py  cat-MCUB-liber.py  clicker-MCUB-repo.py  delete-MCUB-repo.py  dnd-MCUB-repo.py  fastfetch.py  gban.py  gemini-MCUB-repo.py  google-MCUB-liber.py  huificinator.py  js.py  k-uploader-MCUB-repo.py  keyboard-lagre-MCUB-liber.py  mcub-repo-helper.py  menu-buttons-MCUB-repo.py  pictostories-MCUB-liber.py  pinig.py  qr-mod-MCUB-liber.py  radnomanimepic-MCUB-repo.py  shorturl-MCUB-repo.py  sourcetrigger-MCUB-repo.py  spots-MCUB-repo.py  top-MCUB-liber.py  ttmod-MCUB-repo.py  virustotal-MCUB-repo.py  wiki-MCUB-repo.py  ytmod.py
scripts/: compile-requirements.sh  install-requiremets-termux.sh
tests/: conftest.py  requirements-dev.in  requirements-dev.txt  run_tests.py  test_api_extender.py  test_api_protection.py  test_archive_manager.py  test_arg_parser.py  test_cache.py  test_callback_permissions.py  test_code_inline_api.py  test_commands.py  test_database_manager_hard.py  test_db.py  test_debug_logging.py  test_dependency_manager.py  test_emoji_parser.py  test_events.py  test_helpers.py  test_heroku_migration_compat.py  test_hikka_compat.py  test_hikka_detect_module_type.py  test_hikka_strings_shim.py  test_inline.py  test_inline_bot_provision.py  test_integration.py  test_kernel.py  test_kernel_pipeline_syntax.py  test_logger.py  test_man_module.py  test_message_helpers_utils.py  test_module_base_runtime.py  test_module_config.py  test_module_isolation.py  test_module_loader.py  test_modules.py  test_permissions.py  test_platform_utils.py  test_raw_html.py  test_register.py  (+4 more)
tests/mocks/: telegram_client.py
utils/: __init__.py  arg_parser.py  custom_placeholders.py  emoji_parser.py  helpers.py  html_parser.py  message_helpers.py  platform.py  raw_html.py  restart.py  security.py  strings.py
(+19 files in other folders)
