[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | modules_loaded
  | \.eggs
  | \.mypy_cache
  | \.ruff_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["core", "utils", "modules", "core_inline"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "modules_loaded",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules,
    "F811",   # redefined-while-unused
    "UP007",  # non-pep604-annotation-union
    "E402",   # module-import-not-at-top-of-file
    "F821",   # undefined-name (pre-existing)

]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006", # fire-and-forget asyncio tasks (intentional pattern)
    "RUF012", # mutable class attributes (use ClassVar, but many are immutable configs),
    "E741",   # ambiguous-variable-name (l is fine)
    "B904",   # raise-without-from-inside-except
    "B007",   # unused-loop-control-variable
    "B027",   # empty-method-without-abstract-decorator
    "B023",   # function-uses-loop-variable
    "B024",   # abstract-base-class-without-abstract-method
    "B025",   # duplicate-try-block-exception
    "RUF059", # unused-unpacked-variable
    "B018",   # useless-expression
    "F811",   # redefined-while-unused
    "UP007",  # non-pep604-annotation-union
    "E402",   # module-import-not-at-top-of-file
    "F821",   # undefined-name (pre-existing)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["E501", "B011"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
show_error_codes = false
show_column_numbers = true
pretty = true
check_untyped_defs = false
allow_redefinition = true
disable_error_code = [
    "annotation-unchecked",
    "attr-defined",
    "arg-type",
    "assignment",
    "call-arg",
    "call-overload",
    "import-untyped",
    "index",
    "func-returns-value",
    "has-type",
    "truthy-function",
    "list-item",
    "misc",
    "method-assign",
    "name-defined",
    "no-redef",
    "operator",
    "override",
    "return-value",
    "union-attr",
    "valid-type",
    "var-annotated",
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "modules_loaded",
    ".mypy_cache",
    "core/console/",
    "core/web/",
    "core/kernel/",
    "core/lib/kernel_core.py",
    "core/lib/kernel_handlers.py",
    "core/lib/kernel_lifecycle.py",
    "core/lib/kernel_pipeline.py",
    "core/lib/loader/hikka_compat/",
]
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcub-fork"
version = "1.4.2"
description = "MCUB (Telegram userbot) fork with improved API and structure"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon_mcub",
    "aiogram>=3.13,<4",
    "psutil",
    "aiohttp",
    "pysocks",
    "python-socks[asyncio]",
    "aiosqlite",
    "cryptg",
    "socks",
    "jinja2",
    "aiohttp-jinja2",
]

[project.scripts]
mcub = "core.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["core*", "core_inline*", "utils*", "modules*"]
exclude = [
    "tests*",
    "downloads*",
    "logs*",
    "img*",
    "data*",
    "debugger*",
    "gemini_data*",
    "modules_loaded*",
    "tmp*",
]

[tool.setuptools.package-data]
"core.web" = ["templates/**/*", "static/**/*", "img/*"]
