[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcub-debugger"
version = "1.0.0"
description = "Static analysis tool for MCUB modules - detects common errors before runtime"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "@Hairpin00", email = "hairpin@example.com"}
]
keywords = ["mcub", "telethon", "telegram", "userbot", "debugger", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mcub-debugger = "debugger.cli:main"

[project.urls]
Homepage = "https://github.com/hairpin01/MCUB-fork"
Repository = "https://github.com/hairpin01/MCUB-fork"
Issues = "https://github.com/hairpin01/MCUB-fork/issues"
Documentation = "https://github.com/hairpin01/MCUB-fork#mcub-debugger"

[tool.setuptools]
packages = ["debugger"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
debugger = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
